--- a/composer.json
+++ b/composer.json
@@ -16,17 +16,18 @@
         },
         "itk": {
             "type": "composer",
-            "url": "https://packagist.etek.dk"
+            "url": "https://packagist.itkdev.dk"
         }
     },
 
     "require": {
+        "php": "~7.1.0",
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "^2.2",
         "drupal/better_exposed_filters": "^3.0@alpha",
         "drupal/console": "~1.0",
-        "drupal/core": "~8.5.1",
+        "drupal/core": "~8.0",
         "drupal/ds": "^3.1",
         "drupal/email_registration": "^1.0@RC",
         "drupal/entityqueue": "^1.0@alpha",
@@ -36,13 +37,9 @@
         "drupal/pathauto": "^1.2",
         "drupal/samlauth": "^1.3",
         "drupal/toolbar_visibility": "^1.2",
-        "drush/drush": "^9.0.0",
         "vlucas/phpdotenv": "^2.4",
-        "webflo/drupal-finder": "^1.0.0",
-        "webmozart/path-util": "^2.3"
-    },
-    "require-dev": {
-        "webflo/drupal-core-require-dev": "~8.5.1"
+        "webmozart/path-util": "^2.3",
+        "wikimedia/composer-merge-plugin": "^1.4"
     },
     "conflict": {
         "drupal/drupal": "*"
