--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "drupal/pathauto": "^1.2",
         "drupal/samlauth": "^1.3",
         "drupal/toolbar_visibility": "^1.2",
+        "drush/drush": "^9.5",
         "vlucas/phpdotenv": "^2.4",
         "webmozart/path-util": "^2.3",
         "wikimedia/composer-merge-plugin": "^1.4"
