--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
         "drupal/itk_siteimprove": "^1.0",
         "drupal/pathauto": "^1.2",
         "drupal/samlauth": "^1.3",
+        "drupal/system_status": "^2.8",
         "drupal/toolbar_visibility": "^1.2",
         "drush/drush": "^9.5",
         "vlucas/phpdotenv": "^2.4",
